# Vision_coding

./: README.md  start.py
ROS2_learning/chapt1/: CMakeLists.txt  hello_world.py
ROS2_learning/chapt2/: CMakeLists.txt  Makefile  ros2_cpp_node.cpp  ros2_python_node.py
ROS2_learning/chapt2/chapt2_ws/src/: novel3.txt
ROS2_learning/chapt3/topic_ws/src/: novel1.txt
ROS2_learning/chapt6/chapt6_ws/fishbot_description/: CMakeLists.txt  package.xml
ROS2_learning/chapt6/chapt6_ws/install/: local_setup.sh  setup.sh
ROS2_learning/chapt6/chapt6_ws/log/: latest_build
ROS2_learning/chapt7/chapt7_ws/autopatrol_robot/: setup.py
ROS2_learning/chapt7/chapt7_ws/fishbot_application/: setup.py
ROS2_learning/chapt7/chapt7_ws/install/: local_setup.sh  setup.sh
ROS2_learning/chapt7/chapt7_ws/log/: latest_build
ROS2_learning/chapt8/learn_pluginlib/install/: local_setup.sh  setup.sh
ROS2_learning/chapt8/learn_pluginlib/log/: latest_build
ROS2_learning/chapt9/example_project/src/: fishbot_motion_control.cpp  hello_world.cpp  imu.cpp  led.cpp  ultrasound.cpp
beijixiong/: README.md  北极熊代码复现的解析.md
beijixiong/pb2025_ws/install/: local_setup.sh  setup.sh
beijixiong/pb2025_ws/log/: latest_build
beijixiong/pb2025_ws/src/pb2025_sentry_nav/tf_lookuptransform/: CMakeLists.txt
beijixiong/pb2025_ws/src/pb2025_sentry_nav/tf_lookuptransform/include/tf_lookuptransform/: tf_lookuptransform.hpp
beijixiong/pb2025_ws/src/pb2025_sentry_nav/tf_lookuptransform/src/: getpose.cpp  tf_lookuptransform.cpp
beijixiong/ros_ws/install/: local_setup.sh  setup.sh
beijixiong/ros_ws/log/: latest_build
fishbot_camera/: package.xml  setup.py
fishbot_camera/fishbot_camera/: detector_node.py
leida/ws_livox/install/: local_setup.sh  setup.sh
leida/ws_livox/log/: latest_build
leida/ws_livox/src/odometry/: CMakeLists.txt  package.xml
leida/ws_livox/src/odometry/launch/: odometry_listener_launch.py
leida/ws_livox/src/odometry/src/: odometry_listener.cpp  odometry_transform.cpp
leida/ws_livox/src/pcd2pgm/: CMakeLists.txt  package.xml
leida/ws_livox/src/pcd2pgm/launch/: start_rviz.launch.py
leida/ws_livox/src/pcd2pgm/rviz/: map_view.rviz
leida/ws_livox/src/pcd2pgm/save/: scans.pgm  scans.yaml
leida/ws_livox/src/pcd2pgm/src/: pcd2pgm.cpp  pgm_publisher.cpp
simulation/AMCL_仿真/RC26_world/: CMakeLists.txt
simulation/AMCL_仿真/fishbot_navigation2/config/: nav2_params.yaml
simulation/GICP_仿真/: livox_teleop.py
simulation/GICP_仿真/livox_laser_simulation_RO2/: CMakeLists.txt
simulation/RC26_world/: package.xml
simulation/fishbot_navigation2/: package.xml
simulation/fishbot_navigation2/world/: custom_room.world
simulation/odometry/: CMakeLists.txt
simulation/odometry/launch/: odometry_listener_launch.py  odometry_transform_launch.py
simulation/odometry/src/: odometry_transform.cpp
simulation/悬浮_仿真/: unified_teleop.py
simulation/悬浮_仿真/RC26_world/: my_scene.world
simulation/悬浮_仿真/chassis/: package.xml
simulation/悬浮_仿真/chassis/meshes/: left_f_ankle_yaw_link.STL  left_f_wheel_pitch_link.STL  left_heel_wheel_pitch_link.STL  right_b_heel_yaw_link.STL  right_f_wheel_pitch_link.STL
simulation/悬浮_仿真/chassis/urdf/: chassis.urdf
yolo_base2/: example.py  onnx.py  train.py  video.py  yolo-vbn.yaml
yolo_base2/ultralytics/cfg/: __init__.py
yolo_base2/ultralytics/data/: augment.py  loaders.py
yolo_base2/ultralytics/engine/: exporter.py  model.py  predictor.py  trainer.py  tuner.py  validator.py
yolo_base2/ultralytics/hub/: __init__.py  session.py  utils.py
yolo_base2/ultralytics/nn/: tasks.py
yolo_base2/ultralytics/solutions/: streamlit_inference.py
yolo_base2/ultralytics/trackers/: README.md
yolo_base2/ultralytics/utils/: __init__.py  checks.py  loss.py  ops.py  torch_utils.py
仿真/2d雷达重定位版本/2d_leida/jie_ware/: CMakeLists.txt  package.xml
仿真/2d雷达重定位版本/2d_leida/jie_ware/launch/: amcl_test.launch.py
仿真/2d雷达重定位版本/2d_leida/jie_ware/src/: lidar_filter_node.cpp
仿真/3d雷达_amcl/RC26_world/: my_scene.world
仿真/3d雷达_amcl/fishbot_navigation2/: CMakeLists.txt
仿真/3d雷达_gicp/: get_init_pose.py
仿真/3d雷达_gicp/livox_laser_simulation_RO2/: package.xml
仿真/悬浮模块/chassis/: CMakeLists.txt
仿真/悬浮模块/chassis/meshes/: left_b_heel_yaw_link.STL  left_b_wheel_pitch_link.STL  right_b_wheel_pitch_link.STL  right_f_ankle_yaw_link.STL  right_heel_wheel_pitch_link.STL
具有实际意义的程序/定位信息查询/: ip_模糊.py  map.html  豆包定位.py
具有实际意义的程序/定位信息查询/phone_定位/: app.py
大创/程序/: README.md
大创/程序/project_folder/: app.py
如果有空文件来这里找/point_lio/config/: mid360.yaml
如果有空文件来这里找/point_lio/launch/: start_pcd.launch.py
如果有空文件来这里找/point_lio/rviz_cfg/: loam_livox.rviz
实车/livox_mid360_里程计/: README.md  downsample_map.py  get_path_coords.py
实车/livox_mid360_里程计/custom_nav_msgs/: CMakeLists.txt  package.xml
实车/livox_mid360_里程计/fishbot_navigation2/: CMakeLists.txt
实车/livox_mid360_里程计/fishbot_navigation2/PCD/: test.pcd
实车/livox_mid360_里程计/fishbot_navigation2/config/: nav2_params.yaml
实车/livox_mid360_里程计/fishbot_navigation2/config/rviz/: nav2_default_view.rviz
实车/livox_mid360_里程计/fishbot_navigation2/launch/: display_robot.launch.py  navigation2.launch.py
实车/livox_mid360_里程计/fishbot_navigation2/maps/: room.pgm  room.yaml
实车/livox_mid360_里程计/fishbot_navigation2/urdf/: 看这里！！！！！！.md
实车/livox_mid360_里程计/fishbot_navigation2/urdf/my_robot/: my_robot.xacro
实车/livox_mid360_里程计/fishbot_navigation2/urdf/my_robot/sensor/: mid360.xacro
实车/livox_mid360_里程计/multi_launcher/: package.xml  setup.cfg  setup.py
实车/livox_mid360_里程计/nav_speed_heading/: package.xml  setup.cfg  setup.py
实车/livox_mid360_里程计/nav_speed_heading/nav_speed_heading/: preset_nav_node.py  tracker_node.py
实车/livox_mid360_里程计/odometry/: CMakeLists.txt  package.xml
实车/livox_mid360_里程计/odometry/launch/: odometry_listener_launch.py  odometry_transform_math_launch.py
实车/livox_mid360_里程计/odometry/src/: odometry_listener.cpp  odometry_transform.cpp  odometry_transform_math.cpp
摄像头/Intel_d435/: Depth_camera_sanwei.py  depth_camera_depth.py
摄像头/yolo/: export_onnx.py  main.py
摄像头/普通摄像头/: cv.py
电赛/2025/: 电赛_result_sum.py
(+1860 files in other folders)
