<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chassis</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for chassis</p>
    <p>This package contains configuration data, 3D models and launch files</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
