<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odometry</name>  <!-- 包名必须为odometry -->
  <version>0.0.0</version>
  <description>C++ package for subscribing to odometry data in ROS2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- 只保留depend，删除重复的exec_depend -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>ament_cmake_cpplint</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
