cmake_minimum_required(VERSION 3.8)
project(jie_ware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(cv_bridge REQUIRED)
# 移除 ROS 1 的 tf2 依赖
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(OpenCV REQUIRED)
find_package(nav2_msgs REQUIRED)

include_directories(
  include
  ${OpenCV_INCLUDE_DIRS}
)

# Executable: lidar_loc
add_executable(lidar_loc src/lidar_loc.cpp)
ament_target_dependencies(lidar_loc
  rclcpp
  sensor_msgs
  geometry_msgs
  nav_msgs
  std_msgs
  std_srvs
  cv_bridge
  tf2_ros
  tf2_geometry_msgs
)
target_link_libraries(lidar_loc ${OpenCV_LIBS})

# Executable: costmap_cleaner
add_executable(costmap_cleaner src/costmap_cleaner.cpp)
ament_target_dependencies(costmap_cleaner
  rclcpp
  geometry_msgs
  std_srvs
)

# Executable: lidar_filter_node
add_executable(lidar_filter_node src/lidar_filter_node.cpp)
ament_target_dependencies(lidar_filter_node
  rclcpp
  sensor_msgs
)

install(TARGETS
  lidar_loc
  costmap_cleaner
  lidar_filter_node
  DESTINATION lib/${PROJECT_NAME}
)

# 安装 ROS 2 Python Launch 文件
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
  PATTERN "*.launch.py"
  PATTERN "*.launch" EXCLUDE # 排除 ROS 1 XML launch 文件
)

ament_package()